--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 streamlit
+earthengine-api
 geemap
 geopandas
 pandas
 numpy
 matplotlib
-plotly
-earthengine-api
-requests
 scipy
-setuptools
+shapely
+folium
+streamlit-folium
+branca
+pymannkendall
+requests
